[gd_scene load_steps=22 format=3 uid="uid://bxj38cvta0sum"]

[ext_resource type="Theme" uid="uid://bfsrgu5l6jkid" path="res://themes/default_theme.tres" id="1_7pw56"]
[ext_resource type="Script" path="res://scripts/main.gd" id="2_6sgbn"]
[ext_resource type="Texture2D" uid="uid://dx2nc5mw7plo8" path="res://assets/scene_bg/uhhhh_uh_uhhhhh_uh_.png" id="3_6rdc3"]
[ext_resource type="PackedScene" uid="uid://cj4as34cghrbl" path="res://scenes/hub_components/status_bar.tscn" id="4_wy75m"]
[ext_resource type="Texture2D" uid="uid://drl3jkmixlu4x" path="res://assets/icons/main_hub/food_icon.png" id="5_omcu1"]
[ext_resource type="Texture2D" uid="uid://c3llehiwfxe11" path="res://assets/icons/main_hub/happiness_icon.png" id="6_fe4h3"]
[ext_resource type="Texture2D" uid="uid://cg6788bg1jhwp" path="res://assets/icons/main_hub/health_icon.png" id="7_mlhbn"]
[ext_resource type="Texture2D" uid="uid://bpec8xt6w36rq" path="res://assets/goober_forms/babyGoober_idle1.png" id="8_oesx8"]
[ext_resource type="Texture2D" uid="uid://d30xw8yojydk2" path="res://assets/goober_forms/babyGoober_idle2.png" id="9_tuf5o"]
[ext_resource type="Texture2D" uid="uid://ckqh03hsrghlk" path="res://assets/goober_forms/babyGoober_idle3.png" id="10_l57e7"]
[ext_resource type="Texture2D" uid="uid://waisql7jipft" path="res://assets/goober_forms/babyGoober_idle4.png" id="11_v032d"]
[ext_resource type="Texture2D" uid="uid://d0sisrfpuhs7y" path="res://assets/goober_forms/egg.png" id="12_pmbig"]
[ext_resource type="Texture2D" uid="uid://iulw2bqw0gur" path="res://assets/goober_forms/Goober_Adult_Walk-1.png" id="13_ps3tl"]
[ext_resource type="Texture2D" uid="uid://b6vkuv83jclj2" path="res://assets/goober_forms/Goober_Adult_Walk-2.png" id="14_ktqci"]
[ext_resource type="Texture2D" uid="uid://c7loqqymow6h2" path="res://assets/goober_forms/Goober_Adult_Walk-3.png" id="15_v0evp"]
[ext_resource type="Texture2D" uid="uid://hs6iyet6gqfe" path="res://assets/goober_forms/Goober_Adult_Walk-4.png" id="16_1eehr"]
[ext_resource type="Script" path="res://scripts/global_timer.gd" id="17_jaela"]
[ext_resource type="AudioStream" uid="uid://dx5gy4gvri6cr" path="res://music/bg_music.mp3" id="18_h7yc2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p8dxh"]
bg_color = Color(1, 1, 1, 0.247059)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o2g7b"]
bg_color = Color(1, 1, 1, 0.176471)

[sub_resource type="SpriteFrames" id="SpriteFrames_ch2yk"]
animations = [{
"frames": [],
"loop": true,
"name": &"baby_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_oesx8")
}, {
"duration": 1.0,
"texture": ExtResource("9_tuf5o")
}, {
"duration": 1.0,
"texture": ExtResource("10_l57e7")
}, {
"duration": 1.0,
"texture": ExtResource("11_v032d")
}],
"loop": true,
"name": &"baby_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_pmbig")
}],
"loop": true,
"name": &"egg",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"teen_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_ps3tl")
}, {
"duration": 1.0,
"texture": ExtResource("14_ktqci")
}, {
"duration": 1.0,
"texture": ExtResource("15_v0evp")
}, {
"duration": 1.0,
"texture": ExtResource("16_1eehr")
}],
"loop": true,
"name": &"teen_walk",
"speed": 5.0
}]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7pw56")
script = ExtResource("2_6sgbn")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_6rdc3")
expand_mode = 1

[node name="ButtonPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -92.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_p8dxh")

[node name="ShopButton" type="Button" parent="ButtonPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -202.0
offset_top = -72.0
offset_right = -21.0
offset_bottom = -12.0
grow_horizontal = 0
grow_vertical = 0
text = "Shop"

[node name="MinigamesButton" type="Button" parent="ButtonPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -72.0
offset_right = 201.0
offset_bottom = -12.0
grow_vertical = 0
text = "Minigames"

[node name="StatusPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 116.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o2g7b")

[node name="StatusBarContainer" type="HBoxContainer" parent="StatusPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -508.5
offset_top = 20.0
offset_right = 508.5
offset_bottom = 104.0
grow_horizontal = 2
theme_override_constants/separation = 350

[node name="FoodStatus" parent="StatusPanel/StatusBarContainer" instance=ExtResource("4_wy75m")]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("5_omcu1")

[node name="FunStatus" parent="StatusPanel/StatusBarContainer" instance=ExtResource("4_wy75m")]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("6_fe4h3")

[node name="HealthStatus" parent="StatusPanel/StatusBarContainer" instance=ExtResource("4_wy75m")]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("7_mlhbn")

[node name="Progress" type="Label" parent="."]
layout_mode = 0
offset_left = 381.0
offset_top = 578.0
offset_right = 783.0
offset_bottom = 622.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "To next Level: 0 / 10"

[node name="Goober" type="AnimatedSprite2D" parent="."]
position = Vector2(925, 329)
scale = Vector2(0.43337, 0.421732)
sprite_frames = SubResource("SpriteFrames_ch2yk")
animation = &"egg"
autoplay = "egg"

[node name="GlobalTimer" type="Node" parent="."]
script = ExtResource("17_jaela")

[node name="Timer" type="Timer" parent="GlobalTimer"]
process_callback = 0
autostart = true

[node name="EggStateTimer" type="Timer" parent="GlobalTimer"]
wait_time = 10.0
one_shot = true

[node name="BgMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_h7yc2")
autoplay = true

[connection signal="pressed" from="ButtonPanel/ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="ButtonPanel/MinigamesButton" to="." method="_on_minigames_button_pressed"]
[connection signal="timeout" from="GlobalTimer/Timer" to="GlobalTimer" method="_on_timer_timeout"]
